add_executable(fixed_block_pool_test ${CMAKE_CURRENT_SOURCE_DIR}/fixed_block_pool_test.cpp)
target_compile_features(fixed_block_pool_test PUBLIC cxx_std_17)
target_include_directories(fixed_block_pool_test PUBLIC ${FBGEMM_SOURCE_DIR})
target_link_libraries(fixed_block_pool_test gtest gtest_main)

add_executable(sharded_map_test ${CMAKE_CURRENT_SOURCE_DIR}/sharded_map_test.cpp)
target_compile_features(sharded_map_test PUBLIC cxx_std_17)
target_include_directories(fixed_block_pool_test PUBLIC ${FBGEMM_SOURCE_DIR})
target_link_libraries(sharded_map_test gtest gtest_main Folly::folly)

add_executable(store_value_utils_test ${CMAKE_CURRENT_SOURCE_DIR}/store_value_utils_test.cpp)
target_compile_features(store_value_utils_test PUBLIC cxx_std_17)
target_include_directories(store_value_utils_test PUBLIC ${FBGEMM_SOURCE_DIR})
target_link_libraries(store_value_utils_test gtest gtest_main Folly::folly)